2009-06-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.44

2009-06-22  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#122710 Weird screen appearing after closing the camera application
	
	* matchbox/core/mb-wm-client.c: When a window belongs to us, we
	should never kill its owner!

2009-06-22  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.43

2009-06-21  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-client.c: anything descended
	from a dialogue can be system-modal.
	* matchbox/core/mb-wm-object.[ch]: new method
	mb_wm_object_is_descendant().

2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_display_sync):
	  When doing a fullscreen sync don't attempt to re-reparent an
	  undecorated client to the root window.  Undecorated clients
	  don't have frames and are reparented when they are realized.
	  The point is not to bump skip_unmaps because that never comes
	  (sinece X won't re-reparent to the same window) and then we
	  will lose an unmap in the cmgr.

2009-06-17  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#119560 Hiding a window affects the visibility of
	other transient windows
	
	* matchbox/client-types/mb-wm-client-dialog.c: Added
	function mb_wm_client_dialog_stacking_layer() to figure
	out the layer dynamically.
	* matchbox/core/mb-window-manager.c: Remove all transients
	before unmanaging a window.  Function is_system_modal()
	moved out to mb-wm-client.c.
	* matchbox/core/mb-wm-client-window.c: improved
	debugging message.
	* matchbox/core/mb-wm-client.[ch]: moved function
	mb_wm_client_is_system_modal() in from mb-window-manager.c
	and added function mb_wm_client_remove_all_transients().

2009-06-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Apply patch from Laszlo Pere for NB#121265.
	* matchbox/core/mb-wm-keys.c (mb_wm_keys_press): Fix if condition for
	the modifier mask.

	My own fix for keyboard shortcuts: