@@ -37,6 +37,7 @@ struct MBWindowManagerClientPriv
 {
   Bool          realized;
   Bool          mapped;
+  Bool          map_confirmed;
   Bool          iconizing;
   Bool          hiding_from_desktop;
   MBWMSyncType  sync_state;
@@ -479,6 +480,20 @@ mb_wm_client_is_mapped (MBWindowManagerClient *client)
 {
   return client->priv->mapped;
 }
+
+Bool
+mb_wm_client_is_map_confirmed (MBWindowManagerClient *client)
+{
+  return client->priv->map_confirmed;
+}
+
+void
+mb_wm_client_set_map_confirmed (MBWindowManagerClient *client,
+		Bool confirmed)
+{
+  client->priv->map_confirmed = confirmed;
+}
+
 
 void
 mb_wm_client_display_sync (MBWindowManagerClient *client)
