@@ -1,3 +1,13 @@
+2009-06-26  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	Patch from Laszlo Pere.
+
+	* matchbox/core/mb-wm-client.[ch] (mb_wm_client_is_map_confirmed,
+	mb_wm_client_set_map_confirmed): New functions to track if a client
+	has received MapNotify yet.  Related to NB#121902
+	* matchbox/core/mb-window-manager.c (mb_wm_handle_unmap_notify,
+	mb_wm_handle_map_notify): Track if client has received MapNotify.
+
 2009-06-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.44
